--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="#">Etracker</a></h2>
-                        <p>Offline Tool to track Employee Activity & assess their performance based on Login Hours and attendance.</p>
+                        <h2><a href="#">Wi-Fi Jammer</a></h2>
+                        <p>Python program to test Wi-Fi network against anonymous Deauthentication attack which
+disconnect particular system or all devices connected to that Wi-Fi Network in range(Working).
+                        </p>
                     </div>					
                     <div class="col-2 center">
                         <a class="circle-img" href="#">
@@ -78,8 +80,8 @@
                         </a>
                     </div>
                     <div class="col-4">
-                        <h2><a href="#">NetScan</a></h2>
-                        <p><em>Working on this python based project</em> : For now, it's a command line network scanner to check the critical Ports, running services & show complete Network analysis. Furthermore, planning to add messaging, screen or files sharing. </p>
+                        <h2><a href="#">BackupPY</a></h2>
+                        <p><em>Python program to backup & protect your Daily work in a compresssed ZIP file at specified location(i.e Desktop/Documents) or your backup drive(D: E: or USB). </p>
                     </div>
                     <div class="clearboth"></div>
                 </div>
