--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ disconnect particular system or all devices connected to that Wi-Fi Network in r
                     </div>
                     <div class="col-4">
                         <h2><a href="#">BackupPY</a></h2>
-                        <p><em>Python program to backup & protect your Daily work in a compresssed ZIP file at specified location(i.e Desktop/Documents) or your backup drive(D: E: or USB). </p>
+                        <p>Python program to backup & protect your Daily work in a compresssed ZIP file at specified location(i.e Desktop/Documents) or your backup drive(D: E: or USB). </p>
                     </div>
                     <div class="clearboth"></div>
                 </div>
